cabal-version:      3.0
name:               cardano-balance-tx
version:            2024.3.27
synopsis:           Balancing transactions for the Cardano blockchain.
description:        Please see README.md.
homepage:           https://github.com/cardano-foundation/cardano-wallet
author:             Cardano Foundation (High Assurance Lab)
maintainer:         hal@cardanofoundation.org
copyright:          2018-2022 IOHK, 2023 Cardano Foundation
license:            Apache-2.0
category:           Blockchain, Cardano, Transactions
build-type:         Simple

common language
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

common opts-lib
  ghc-options: -Wall -Wcompat -fwarn-redundant-constraints

  if flag(release)
    ghc-options: -O2 -Werror

common opts-exe
  ghc-options: -threaded -rtsopts -Wall

  if flag(release)
    ghc-options: -O2 -Werror

flag release
  description: Enable optimization and `-Werror`
  default:     False
  manual:      True

library
  import:          language, opts-lib
  hs-source-dirs:  lib/main
  build-depends:
    , cardano-balance-tx:internal
  exposed-modules:
    Cardano.Write.Tx

library internal
  import:          language, opts-lib
  hs-source-dirs:  lib/internal
  visibility:      public
  build-depends:
    , base
    , bytestring
    , cardano-addresses
    , cardano-api
    , cardano-coin-selection
    , cardano-crypto-class
    , cardano-ledger-allegra
    , cardano-ledger-alonzo
    , cardano-ledger-api
    , cardano-ledger-babbage
    , cardano-ledger-binary
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-ledger-shelley
    , cardano-slotting
    , cardano-strict-containers
    , cardano-wallet-primitive
    , cborg
    , containers
    , deepseq
    , fmt
    , generic-lens
    , groups
    , int-cast
    , lens
    , MonadRandom
    , monoid-subclasses
    , ouroboros-consensus
    , ouroboros-consensus-cardano
    , pretty-simple
    , QuickCheck
    , serialise
    , std-gen-seed
    , text
    , transformers
  exposed-modules:
    Internal.Cardano.Write.Tx
    Internal.Cardano.Write.Tx.Balance
    Internal.Cardano.Write.Tx.Balance.CoinSelection
    Internal.Cardano.Write.Tx.Balance.Distribute
    Internal.Cardano.Write.Tx.Balance.TokenBundleSize
    Internal.Cardano.Write.Tx.Gen
    Internal.Cardano.Write.Tx.Redeemers
    Internal.Cardano.Write.Tx.Sign
    Internal.Cardano.Write.Tx.SizeEstimation
    Internal.Cardano.Write.Tx.TimeTranslation
    Internal.Cardano.Write.UTxOAssumptions

test-suite test
  import:             language, opts-exe
  ghc-options:        -with-rtsopts=-M2G -with-rtsopts=-N4
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test/spec test/data
  main-is:            run-test-suite.hs
  build-depends:
    , address-derivation-discovery
    , base
    , bytestring
    , cardano-addresses
    , cardano-api
    , cardano-api-extra
    , cardano-balance-tx:internal
    , cardano-binary
    , cardano-coin-selection
    , cardano-crypto
    , cardano-crypto-class
    , cardano-crypto-wrapper
    , cardano-ledger-alonzo
    , cardano-ledger-alonzo-test
    , cardano-ledger-api
    , cardano-ledger-babbage:{cardano-ledger-babbage, testlib}
    , cardano-ledger-byron
    , cardano-ledger-conway
    , cardano-ledger-conway:testlib
    , cardano-ledger-core
    , cardano-ledger-mary:testlib
    , cardano-ledger-shelley
    , cardano-numeric
    , cardano-slotting
    , cardano-strict-containers
    , cardano-wallet-primitive
    , cardano-wallet-secrets
    , cardano-wallet-test-utils
    , cborg
    , containers
    , data-default
    , directory
    , filepath
    , fmt
    , generic-lens
    , generics-sop
    , groups
    , hspec
    , hspec-core
    , hspec-golden
    , int-cast
    , lens
    , MonadRandom
    , monoid-subclasses
    , ouroboros-consensus
    , ouroboros-consensus-cardano
    , ouroboros-network-api
    , QuickCheck
    , quickcheck-classes
    , sop-extras
    , std-gen-seed
    , text
    , time
    , transformers
    , with-utf8
  build-tool-depends: hspec-discover:hspec-discover
  other-modules:
    Internal.Cardano.Write.Tx.Balance.CoinSelectionSpec
    Internal.Cardano.Write.Tx.Balance.DistributeSpec
    Internal.Cardano.Write.Tx.Balance.TokenBundleSizeSpec
    Internal.Cardano.Write.Tx.BalanceSpec
    Internal.Cardano.Write.TxSpec
    Spec
