cabal-version:      3.0
name:               cardano-balance-tx
version:            0.2025.1.9
synopsis:           Balancing transactions for the Cardano blockchain.
description:        Please see README.md.
homepage:           https://github.com/cardano-foundation/cardano-wallet
author:             Cardano Foundation (High Assurance Lab)
maintainer:         hal@cardanofoundation.org
copyright:          2018-2022 IOHK, 2023 Cardano Foundation
license:            Apache-2.0
category:           Blockchain, Cardano, Transactions
build-type:         Simple

common language
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

common opts-lib
  ghc-options: -Wall -Wcompat -fwarn-redundant-constraints

  if flag(release)
    ghc-options: -O2 -Werror

common opts-exe
  ghc-options: -threaded -rtsopts -Wall

  if flag(release)
    ghc-options: -O2 -Werror

flag release
  description: Enable optimization and `-Werror`
  default:     False
  manual:      True

library
  import:          language, opts-lib
  hs-source-dirs:  lib/main
  build-depends:
    , cardano-balance-tx:internal
    , cardano-ledger-api
  exposed-modules:
    Cardano.Write.Eras
    Cardano.Write.Tx

library internal
  import:          language, opts-lib
  hs-source-dirs:  lib/internal
  visibility:      public
  build-depends:
    , base >= 4.14 && < 5
    , bytestring >= 0.10.6 && < 0.13
    , cardano-addresses == 3.12.0
    , cardano-api >= 10.1 && < 10.2
    , cardano-coin-selection
    , cardano-crypto-class >= 2.1.5.0 && < 2.2
    , cardano-ledger-allegra
    , cardano-ledger-alonzo
    , cardano-ledger-api >= 1.9.2.0 && < 1.10
    , cardano-ledger-babbage
    , cardano-ledger-binary
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-ledger-shelley
    , cardano-slotting >= 0.2 && < 0.3
    , cardano-strict-containers >= 0.1.3.0 && < 0.2
    , cardano-wallet-primitive
    , cardano-wallet-test-utils
    , cborg >= 0.2.1 && <0.3
    , containers >= 0.5 && < 0.8
    , deepseq >= 1.4.4 && < 1.6
    , either
    , fmt >= 0.6.3 && < 0.7
    , generic-lens >= 2.2.2.0 && < 2.3
    , groups >= 0.5.3 && < 0.6
    , int-cast >= 0.2.0.0 && < 0.3
    , lens >= 5.2.3 && < 5.4
    , MonadRandom >= 0.6 && < 0.7
    , monoid-subclasses >= 1.2.5.1 && < 1.3
    , nonempty-containers >= 0.3.4.5 && < 0.4
    , ouroboros-consensus >= 0.20.0.0 && < 0.22.0.0
    , ouroboros-consensus-cardano
    , pretty-simple >= 4.1.2.0 && < 4.2
    , QuickCheck >= 2.14 && <= 2.16
    , serialise >= 0.2.6.1 && < 0.3
    , std-gen-seed
    , text >= 1.2 && < 2.2
    , transformers >= 0.6.1.0 && < 0.7
  exposed-modules:
    Internal.Cardano.Write.Eras
    Internal.Cardano.Write.Tx
    Internal.Cardano.Write.Tx.Balance
    Internal.Cardano.Write.Tx.Balance.CoinSelection
    Internal.Cardano.Write.Tx.Balance.Surplus
    Internal.Cardano.Write.Tx.Balance.TokenBundleSize
    Internal.Cardano.Write.Tx.Gen
    Internal.Cardano.Write.Tx.Redeemers
    Internal.Cardano.Write.Tx.Sign
    Internal.Cardano.Write.Tx.SizeEstimation
    Internal.Cardano.Write.Tx.TimeTranslation
    Internal.Cardano.Write.Tx.TxWithUTxO
    Internal.Cardano.Write.Tx.TxWithUTxO.Gen
    Internal.Cardano.Write.UTxOAssumptions

test-suite test
  import:             language, opts-exe
  ghc-options:        -with-rtsopts=-M2G -with-rtsopts=-N4
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test/spec test/data
  main-is:            run-test-suite.hs
  build-depends:
    , address-derivation-discovery
    , base
    , bytestring
    , cardano-addresses
    , cardano-api
    , cardano-api-extra
    , cardano-balance-tx:internal
    , cardano-binary == 1.7.1.0
    , cardano-coin-selection
    , cardano-crypto >= 1.1.2 && < 1.2
    , cardano-crypto-class
    , cardano-crypto-wrapper == 1.5.1.3
    , cardano-ledger-alonzo
    , cardano-ledger-alonzo-test >= 1.3.0 && < 1.4
    , cardano-ledger-api
    , cardano-ledger-babbage:{cardano-ledger-babbage, testlib}
    , cardano-ledger-byron
    , cardano-ledger-conway
    , cardano-ledger-conway:testlib
    , cardano-ledger-core
    , cardano-ledger-mary:testlib
    , cardano-ledger-shelley
    , cardano-numeric
    , cardano-slotting
    , cardano-strict-containers
    , cardano-wallet-primitive
    , cardano-wallet-secrets
    , cardano-wallet-test-utils
    , cborg
    , containers
    , data-default >= 0.7.1.1 && < 0.8
    , directory >= 1.3.8 && < 1.4
    , filepath >= 1.4.300.1 && < 1.6
    , fmt >= 0.6.3.0 && < 0.7
    , generic-lens
    , generics-sop >= 0.5.1.4 && < 0.6
    , groups
    , hspec >= 2.11.0 && < 2.12
    , hspec-core
    , hspec-golden >= 0.2.2 && < 0.3
    , int-cast
    , lens
    , MonadRandom
    , monoid-subclasses
    , nonempty-containers
    , ouroboros-consensus
    , ouroboros-consensus-cardano
    , ouroboros-network-api
    , QuickCheck >= 2.14 && < 2.16
    , quickcheck-classes >= 0.6.5 && < 0.7
    , sop-extras >= 0.2.1 && < 0.3
    , std-gen-seed
    , text
    , time >= 1.12.2 && < 1.15
    , transformers
    , with-utf8 >= 1.1.0 && < 1.2 
  build-tool-depends: hspec-discover:hspec-discover
  other-modules:
    Internal.Cardano.Write.Tx.Balance.CoinSelectionSpec
    Internal.Cardano.Write.Tx.Balance.SurplusSpec
    Internal.Cardano.Write.Tx.Balance.TokenBundleSizeSpec
    Internal.Cardano.Write.Tx.BalanceSpec
    Internal.Cardano.Write.TxSpec
    Spec
