cabal-version:       3.0
name:                cardano-wallet-base
version:             2021.12.15
synopsis:            Custom Prelude and basic utility functions required by the wallet.
homepage:            https://github.com/input-output-hk/cardano-wallet
author:              IOHK Engineering Team
maintainer:          operations@iohk.io
copyright:           2018-2021 IOHK
license:             Apache-2.0
category:            Web
build-type:          Simple

flag release
    description: Enable optimization and `-Werror`
    default: False
    manual: True

common base { build-depends: base >= 4.14 && < 4.15 }

common project-config
  default-language:     Haskell2010
  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wredundant-constraints
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wunused-packages

  if (flag(release))
    ghc-options:       -O2 -Werror

common exe
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T

library
  import: base, project-config
  build-depends:
      async
    , bytestring
    , code-page
    , contra-tracer
    , deepseq
    , exceptions
    , extra
    , fmt
    , formatting
    , generic-lens
    , pretty-simple
    , process
    , profunctors
    , say
    , text
    , transformers
    , unliftio-core
    , unliftio
  hs-source-dirs:
      src
  exposed-modules:
      Cardano.Wallet.Base
      Cardano.Wallet.Startup
      UnliftIO.Compat
  if os(windows)
    build-depends: Win32
    other-modules: Cardano.Wallet.Startup.Windows
    cpp-options:   -DWINDOWS
  else
    build-depends: unix
    other-modules: Cardano.Wallet.Startup.POSIX

test-suite unit
  import: base, project-config, exe
  build-depends:
      cardano-wallet-base
    , cardano-wallet-test-utils
    , bytestring
    , hspec
    , hspec-core
    , hspec-expectations
    , text
    , unliftio
    , QuickCheck
  build-tool-depends:
      hspec-discover:hspec-discover
  type:
     exitcode-stdio-1.0
  hs-source-dirs:
      test
  main-is:
      base-unit-test.hs
  other-modules:
      Cardano.Wallet.BaseSpec
      Cardano.Wallet.StartupSpec
