name:          bech32
version:       2019.7.24
synopsis:      Implementation of the Bech32 segwit address format (BIP 0173).
homepage:      https://github.com/input-output-hk/cardano-wallet
author:        IOHK Engineering Team
maintainer:    operations@iohk.io
copyright:     2017 Marko Bencun, 2019 IOHK
license:       Apache-2.0
category:      Web
build-type:    Simple
cabal-version: >=1.10

flag development
    description: Disable `-Werror`
    default: False
    manual: True

library
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -Wall
      -Wcompat
      -fwarn-redundant-constraints
  if (!flag(development))
    ghc-options:
      -Werror
  build-depends:
      array
    , base
    , bytestring
    , containers
    , extra
    , text
    , text-class
  hs-source-dirs:
      src
  exposed-modules:
      Codec.Binary.Bech32
      Codec.Binary.Bech32.Internal

test-suite bech32-test
  default-language:
      Haskell2010
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test
  ghc-options:
      -threaded -rtsopts -with-rtsopts=-N
      -O2
      -Wall
  if (!flag(development))
    ghc-options:
      -Werror
  build-depends:
      base
    , bech32
    , bytestring
    , containers
    , deepseq
    , extra
    , hspec
    , QuickCheck
    , text
    , vector
  build-tools:
      hspec-discover
  main-is:
      Main.hs
  other-modules:
      Codec.Binary.Bech32Spec
