cabal-version: 3.0
name:          cardano-wallet-benchmarks
version:       2024.2.23
synopsis:      Benchmarks of the cardano-wallet.
homepage:      https://github.com/cardano-foundation/cardano-wallet
license:       Apache-2.0
license-file:  LICENSE
author:        Cardano Foundation (High Assurance Lab)
maintainer:    hal@cardanofoundation.org
copyright:     2023 Cardano Foundation
category:      API
build-type:    Simple

common language
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

flag release
  description: Enable optimization and `-Werror`
  default:     False
  manual:      True

common opts-lib
  ghc-options: -Wall -Wcompat -Wredundant-constraints

  if flag(release)
    ghc-options: -O2 -Werror

common opts-exe
  ghc-options: -threaded -rtsopts -Wall -Wredundant-constraints

  if flag(release)
    ghc-options: -O2 -Werror

library
  import:          language, opts-lib
  hs-source-dirs:  src
  build-depends:
    , aeson
    , base
    , cardano-addresses
    , cardano-wallet-application-extras
    , cardano-wallet-launcher
    , cardano-wallet-network-layer
    , cardano-wallet-primitive
    , cardano-wallet-test-utils
    , cardano-wallet:{cardano-wallet, cardano-wallet-api-http}
    , cardano-wallet-integration:framework
    , criterion-measurement
    , deepseq
    , directory
    , faucet
    , filepath
    , fmt
    , generic-lens
    , hspec
    , http-client
    , http-types
    , iohk-monitoring
    , iohk-monitoring-extra
    , local-cluster
    , mtl
    , optparse-applicative
    , resourcet
    , say
    , servant-client
    , temporary-extra
    , text
    , text-class
    , time
    , unliftio
    , unliftio-core
    , wai-middleware-logging
    , with-utf8

  exposed-modules:
    Cardano.Wallet.BenchShared
    Cardano.Wallet.Benchmarks.Latency.Measure
    Cardano.Wallet.Benchmarks.Latency.BenchM

benchmark restore
  import:         language, opts-exe
  type:           exitcode-stdio-1.0
  hs-source-dirs: exe
  main-is:        restore-bench.hs
  build-depends:
    , address-derivation-discovery
    , aeson
    , base
    , bytestring
    , cardano-addresses
    , cardano-balance-tx:internal
    , cardano-wallet-benchmarks
    , cardano-wallet-launcher
    , cardano-wallet-network-layer
    , cardano-wallet-primitive
    , cardano-wallet:{cardano-wallet, cardano-wallet-api-http}
    , containers
    , contra-tracer
    , crypto-hash-extra
    , filepath
    , fmt
    , iohk-monitoring
    , iohk-monitoring-extra
    , say
    , text
    , text-class
    , time
    , transformers
    , unliftio

benchmark latency
  import:         language, opts-exe
  type:           exitcode-stdio-1.0
  hs-source-dirs: exe
  main-is:        latency-bench.hs
  build-depends:
    , aeson
    , base
    , cardano-addresses
    , cardano-wallet-application-extras
    , cardano-wallet-benchmarks
    , cardano-wallet-network-layer
    , cardano-wallet-primitive
    , cardano-wallet:{cardano-wallet, cardano-wallet-api-http}
    , cardano-wallet-integration:framework
    , directory
    , exceptions
    , faucet
    , filepath
    , fmt
    , generic-lens
    , hspec
    , http-client
    , http-types
    , iohk-monitoring
    , iohk-monitoring-extra
    , local-cluster
    , mtl
    , optparse-applicative
    , resourcet
    , servant-client
    , temporary-extra
    , text
    , time
    , unliftio
    , unliftio-core
    , wai-middleware-logging
    , with-utf8

benchmark db
  import:         language, opts-exe
  type:           exitcode-stdio-1.0
  hs-source-dirs: exe
  main-is:        db-bench.hs
  build-depends:
    , address-derivation-discovery
    , base
    , bytestring
    , cardano-addresses
    , cardano-api
    , cardano-crypto
    , cardano-wallet-benchmarks
    , cardano-wallet-network-layer
    , cardano-wallet-primitive
    , cardano-wallet-read
    , cardano-wallet-secrets
    , cardano-wallet-test-utils
    , cardano-wallet-unit:test-common
    , cardano-wallet:cardano-wallet
    , containers
    , contra-tracer
    , criterion
    , cryptonite
    , deepseq
    , directory
    , filepath
    , fmt
    , iohk-monitoring
    , iohk-monitoring-extra
    , memory
    , random
    , text
    , text-class
    , time
    , unliftio
    , with-utf8

benchmark api
  import:         language, opts-exe
  type:           exitcode-stdio-1.0
  hs-source-dirs: exe
  main-is:        api-bench.hs
  build-depends:
    , address-derivation-discovery
    , aeson
    , base
    , bytestring
    , cardano-api
    , cardano-balance-tx:internal
    , cardano-wallet-benchmarks
    , cardano-wallet-network-layer
    , cardano-wallet-primitive
    , cardano-wallet-read
    , cardano-wallet-unit:test-common
    , cardano-wallet:cardano-wallet
    , containers
    , fmt
    , iohk-monitoring
    , iohk-monitoring-extra
    , say
    , text
    , time
    , with-utf8

benchmark erafun-benchmark
  import:           language, opts-exe
  type:             exitcode-stdio-1.0
  hs-source-dirs:   exe
  main-is:          EraFun.hs
  build-depends:
    , base
    , bytestring
    , cardano-wallet
    , cardano-wallet-primitive
    , cardano-wallet-read
    , criterion
    , time

  default-language: Haskell2010
