cabal-version: 3.0
name:          cardano-wallet-benchmarks
version:       2024.7.15
synopsis:      Benchmarks of the cardano-wallet.
homepage:      https://github.com/cardano-foundation/cardano-wallet
license:       Apache-2.0
license-file:  LICENSE
author:        Cardano Foundation (High Assurance Lab)
maintainer:    hal@cardanofoundation.org
copyright:     2023 Cardano Foundation
category:      API
build-type:    Simple

common language
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

flag release
  description: Enable optimization and `-Werror`
  default:     False
  manual:      True

common opts-lib
  ghc-options: -Wall -Wcompat -Wredundant-constraints

  if flag(release)
    ghc-options: -O2 -Werror

common opts-exe
  ghc-options: -threaded -rtsopts -Wall -Wredundant-constraints

  if flag(release)
    ghc-options: -O2 -Werror

library
  import:          language, opts-lib
  hs-source-dirs:  src
  build-depends:
    , aeson
    , base
    , bytestring
    , cardano-addresses
    , cardano-wallet
    , cardano-wallet-api
    , cardano-wallet-application-extras
    , cardano-wallet-integration:framework
    , cardano-wallet-launcher
    , cardano-wallet-network-layer
    , cardano-wallet-primitive
    , cardano-wallet-test-utils
    , cassava
    , comonad
    , containers
    , criterion-measurement
    , deepseq
    , directory
    , extra
    , faucet
    , filepath
    , fmt
    , foldl
    , generic-lens
    , hspec
    , http-client
    , http-types
    , iohk-monitoring
    , iohk-monitoring-extra
    , local-cluster
    , mtl
    , optparse-applicative
    , pathtype
    , resourcet
    , say
    , servant-client
    , stm
    , temporary-extra
    , text
    , text-class
    , time
    , unliftio
    , unliftio-core
    , vector
    , wai-middleware-logging
    , with-utf8

  exposed-modules:
    Cardano.Wallet.BenchShared
    Cardano.Wallet.Benchmarks.Collect
    Cardano.Wallet.Benchmarks.Latency.Measure
    Cardano.Wallet.Benchmarks.Latency.BenchM

benchmark restore
  import:         language, opts-exe
  type:           exitcode-stdio-1.0
  hs-source-dirs: exe
  main-is:        restore-bench.hs
  build-depends:
    , address-derivation-discovery
    , aeson
    , base
    , bytestring
    , cardano-addresses
    , cardano-balance-tx:internal
    , cardano-wallet
    , cardano-wallet-api
    , cardano-wallet-benchmarks
    , cardano-wallet-launcher
    , cardano-wallet-network-layer
    , cardano-wallet-primitive
    , cardano-wallet-read
    , containers
    , contra-tracer
    , crypto-primitives
    , filepath
    , fmt
    , iohk-monitoring
    , iohk-monitoring-extra
    , optparse-applicative
    , say
    , text
    , text-class
    , time
    , transformers
    , unliftio

benchmark latency
  import:         language, opts-exe
  type:           exitcode-stdio-1.0
  hs-source-dirs: exe
  main-is:        latency-bench.hs
  build-depends:
    , aeson
    , base
    , cardano-addresses
    , cardano-wallet
    , cardano-wallet-api
    , cardano-wallet-application-extras
    , cardano-wallet-benchmarks
    , cardano-wallet-integration:framework
    , cardano-wallet-launcher
    , cardano-wallet-network-layer
    , cardano-wallet-primitive
    , directory
    , exceptions
    , extra
    , faucet
    , filepath
    , fmt
    , generic-lens
    , hspec
    , http-client
    , http-types
    , iohk-monitoring
    , iohk-monitoring-extra
    , local-cluster
    , mtl
    , optparse-applicative
    , pathtype
    , resourcet
    , servant-client
    , temporary-extra
    , text
    , time
    , unliftio
    , unliftio-core
    , wai-middleware-logging
    , with-utf8

benchmark db
  import:         language, opts-exe
  type:           exitcode-stdio-1.0
  hs-source-dirs: exe
  main-is:        db-bench.hs
  build-depends:
    , address-derivation-discovery
    , base
    , bytestring
    , cardano-addresses
    , cardano-api
    , cardano-crypto
    , cardano-wallet
    , cardano-wallet-benchmarks
    , cardano-wallet-network-layer
    , cardano-wallet-primitive
    , cardano-wallet-read
    , cardano-wallet-secrets
    , cardano-wallet-test-utils
    , cardano-wallet-unit:test-common
    , containers
    , contra-tracer
    , criterion
    , criterion-measurement
    , crypto-primitives
    , deepseq
    , directory
    , extra
    , filepath
    , fmt
    , foldl
    , iohk-monitoring
    , iohk-monitoring-extra
    , memory
    , mtl
    , random
    , text
    , text-class
    , time
    , unliftio
    , with-utf8

benchmark api
  import:         language, opts-exe
  type:           exitcode-stdio-1.0
  hs-source-dirs: exe
  main-is:        api-bench.hs
  build-depends:
    , address-derivation-discovery
    , aeson
    , base
    , bytestring
    , cardano-api
    , cardano-balance-tx:internal
    , cardano-wallet
    , cardano-wallet-benchmarks
    , cardano-wallet-network-layer
    , cardano-wallet-primitive
    , cardano-wallet-read
    , cardano-wallet-unit:test-common
    , containers
    , filepath
    , fmt
    , iohk-monitoring
    , iohk-monitoring-extra
    , mtl
    , say
    , text
    , time
    , with-utf8

benchmark read-blocks
  import:           language, opts-exe
  type:             exitcode-stdio-1.0
  hs-source-dirs:   exe
  main-is:          read-blocks.hs
  build-depends:
    , base
    , bytestring
    , cardano-wallet
    , cardano-wallet-benchmarks
    , cardano-wallet-primitive
    , cardano-wallet-read
    , criterion
    , iohk-monitoring-extra
    , mtl
    , time

  default-language: Haskell2010
