cabal-version: 3.0
name:          cardano-wallet-buildkite
version:       0.2024.7.7
description:   CI tools to query Buildkite API
license:       Apache-2.0
license-file:  LICENSE
author:        Cardano Foundation (High Assurance Lab)
maintainer:    hal@cardanofoundation.org
synopsis:      Query Buildkite API using Servant
copyright:     2024 Cardano Foundation
build-type:    Simple

common language
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

flag release
  description: Enable optimization and `-Werror`
  default:     False
  manual:      True

common opts-lib
  ghc-options:
    -O2 -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wunused-foralls -Wunused-foralls -fprint-explicit-foralls
    -fprint-explicit-kinds -Wcompat -Widentities
    -Werror=incomplete-patterns -Wredundant-constraints
    -Wpartial-fields -Wtabs -fhelpful-errors -fprint-expanded-synonyms
    -fwarn-unused-do-bind -fwarn-incomplete-uni-patterns
    -freverse-errors


library
  import:           language, opts-lib
  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , contra-tracer
    , exceptions
    , http-client
    , http-client-tls
    , http-media
    , pretty-simple
    , servant
    , servant-client
    , streaming
    , text
    , stm
    , time

  if flag(release)
    ghc-options: -O2 -Werror
  hs-source-dirs:   src

  exposed-modules:
    Buildkite.API
    Buildkite.Client
    Buildkite.LimitsLock
