cabal-version: 3.0
name:          cardano-wallet-buildkite
version:       0.2024.7.7
description:   CI tools to query Buildkite API
license:       Apache-2.0
license-file:  LICENSE
author:        Cardano Foundation (High Assurance Lab)
maintainer:    hal@cardanofoundation.org
synopsis:      Query Buildkite API using Servant
copyright:     2024 Cardano Foundation
build-type:    Simple

common language
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

flag release
  description: Enable optimization and `-Werror`
  default:     False
  manual:      True

common opts-lib
  ghc-options:
    -O2 -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wunused-foralls -Wunused-foralls -fprint-explicit-foralls
    -fprint-explicit-kinds -Wcompat -Widentities
    -Werror=incomplete-patterns -Wredundant-constraints
    -Wpartial-fields -Wtabs -fhelpful-errors -fprint-expanded-synonyms
    -fwarn-unused-do-bind -fwarn-incomplete-uni-patterns
    -freverse-errors

common opts-exe
  ghc-options: -threaded -rtsopts -Wall -Wredundant-constraints

  if flag(release)
    ghc-options: -O2 -Werror

executable artifacts-csv
  import:         language, opts-exe
  hs-source-dirs: exe
  main-is:        artifacts-csv.hs
  build-depends:
    , aeson
    , aeson-pretty
    , base
    , bytestring
    , cardano-wallet-buildkite
    , cassava
    , containers
    , contra-tracer
    , directory
    , filepath
    , exceptions
    , foldl
    , http-client
    , http-client-tls
    , http-media
    , http-types
    , monoidal-containers
    , optparse-applicative
    , pretty-simple
    , servant
    , servant-client
    , streaming
    , text
    , time
    , vector

library
  import:          language, opts-lib
  build-depends:
    , aeson
    , base
    , bytestring
    , cassava
    , containers
    , contra-tracer
    , exceptions
    , http-client
    , http-client-tls
    , http-media
    , http-types
    , pretty-simple
    , servant
    , servant-client
    , stm
    , streaming
    , text
    , time

  if flag(release)
    ghc-options: -O2 -Werror

  hs-source-dirs:  src
  exposed-modules:
    Buildkite.API
    Buildkite.Artifacts
    Buildkite.Artifacts.CSV
    Buildkite.Client
    Buildkite.Connection
    Buildkite.LimitsLock
