name:                cardano-wallet-byron
version:             2020.3.16
synopsis:            Wallet backend protocol-specific bits implemented using byron nodes
description:         Please see README.md
homepage:            https://github.com/input-output-hk/cardano-wallet
author:              IOHK Engineering Team
maintainer:          operations@iohk.io
copyright:           2020 IOHK
license:             Apache-2.0
category:            Web
build-type:          Simple
cabal-version:       >=1.10

flag development
    description: Disable `-Werror`
    default: False
    manual: True

library
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -Wall
      -Wcompat
      -fwarn-redundant-constraints
  if (!flag(development))
    ghc-options:
      -Werror
  build-depends:
      base
    , aeson
    , async
    , bytestring
    , cardano-binary
    , cardano-crypto
    , cardano-crypto-wrapper
    , cardano-ledger
    , cardano-wallet-core
    , cardano-wallet-launcher
    , cborg
    , containers
    , contra-tracer
    , cryptonite
    , deepseq
    , directory
    , either
    , exceptions
    , filepath
    , fmt
    , io-sim-classes
    , iohk-monitoring
    , memory
    , network
    , network-mux
    , ouroboros-consensus
    , ouroboros-consensus-byron
    , ouroboros-network
    , ouroboros-network-framework
    , process
    , retry
    , temporary
    , text
    , text-class
    , time
    , transformers
    , typed-protocols-examples
    , unordered-containers
    , warp
    , yaml
  hs-source-dirs:
      src
  exposed-modules:
      Cardano.Wallet.Byron
      Cardano.Wallet.Byron.Compatibility
      Cardano.Wallet.Byron.Network
      Cardano.Wallet.Byron.Transaction
      Cardano.Wallet.Byron.Transaction.Size
      Cardano.Wallet.Byron.Launch

executable cardano-wallet-byron
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -threaded -rtsopts
      -Wall
      -O2
  if (!flag(development))
    ghc-options:
      -Werror
  build-depends:
      base
    , cardano-ledger
    , cardano-wallet-byron
    , cardano-wallet-cli
    , cardano-wallet-core
    , cardano-wallet-launcher
    , contra-tracer
    , iohk-monitoring
    , network
    , optparse-applicative
    , text
    , text-class
    , transformers
  hs-source-dirs:
      exe
  main-is:
    cardano-wallet-byron.hs

test-suite unit
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -threaded -rtsopts
      -Wall
  if (!flag(development))
    ghc-options:
      -O2
      -Werror
  build-depends:
      base
    , bytestring
    , cardano-crypto
    , cardano-wallet-core
    , cardano-wallet-byron
    , containers
    , hspec
    , memory
  build-tools:
      hspec-discover
  type:
     exitcode-stdio-1.0
  hs-source-dirs:
      test/unit
  main-is:
      Main.hs
  other-modules:
      Cardano.Wallet.Byron.CompatibilitySpec
      Cardano.Wallet.Byron.TransactionSpec

test-suite cardano-node-integration
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -threaded -rtsopts
      -Wall
  if (!flag(development))
    ghc-options:
      -O2
      -Werror
  build-depends:
      base
    , aeson
    , async
    , bytestring
    , cardano-wallet-byron
    , cardano-wallet-cli
    , cardano-wallet-core
    , cardano-wallet-core-integration
    , cardano-wallet-launcher
    , cardano-wallet-test-utils
    , generic-lens
    , hspec
    , http-client
    , http-types
    , iohk-monitoring
    , memory
    , temporary
    , text
  build-tools:
      cardano-wallet-byron
  type:
     exitcode-stdio-1.0
  hs-source-dirs:
      test/integration
  main-is:
      Main.hs
  other-modules:
      Cardano.Wallet.Byron.Faucet
      Test.Integration.Byron.Scenario.API.Transactions
