name:                cardano-wallet-byron
version:             2020.4.7
synopsis:            Wallet backend protocol-specific bits implemented using byron nodes
description:         Please see README.md
homepage:            https://github.com/input-output-hk/cardano-wallet
author:              IOHK Engineering Team
maintainer:          operations@iohk.io
copyright:           2020 IOHK
license:             Apache-2.0
category:            Web
build-type:          Simple
cabal-version:       >=1.10

flag development
    description: Disable `-Werror`
    default: False
    manual: True

library
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -Wall
      -Wcompat
      -fwarn-redundant-constraints
  if (!flag(development))
    ghc-options:
      -Werror
  build-depends:
      base
    , aeson
    , async
    , bytestring
    , cardano-binary
    , cardano-crypto
    , cardano-crypto-wrapper
    , cardano-ledger
    , cardano-wallet-cli
    , cardano-wallet-core
    , cardano-wallet-launcher
    , cborg
    , containers
    , contra-tracer
    , cryptonite
    , deepseq
    , directory
    , either
    , exceptions
    , filepath
    , fmt
    , io-sim-classes
    , iohk-monitoring
    , memory
    , network
    , network-mux
    , optparse-applicative
    , ouroboros-consensus
    , ouroboros-consensus-byron
    , ouroboros-network
    , ouroboros-network-framework
    , process
    , retry
    , temporary
    , text
    , text-class
    , time
    , transformers
    , typed-protocols-examples
    , unordered-containers
    , warp
    , yaml
    , Win32-network
  hs-source-dirs:
      src
  exposed-modules:
      Cardano.Wallet.Byron
      Cardano.Wallet.Byron.Compatibility
      Cardano.Wallet.Byron.Network
      Cardano.Wallet.Byron.Transaction
      Cardano.Wallet.Byron.Transaction.Size
      Cardano.Wallet.Byron.Launch

executable cardano-wallet-byron
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -threaded -rtsopts
      -Wall
      -O2
  if (!flag(development))
    ghc-options:
      -Werror
  build-depends:
      base
    , cardano-wallet-byron
    , cardano-wallet-cli
    , cardano-wallet-core
    , cardano-wallet-launcher
    , contra-tracer
    , iohk-monitoring
    , network
    , optparse-applicative
    , text
    , text-class
    , transformers
  hs-source-dirs:
      exe
  main-is:
    cardano-wallet-byron.hs

test-suite unit
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -threaded -rtsopts
      -Wall
  if (!flag(development))
    ghc-options:
      -O2
      -Werror
  build-depends:
      base
    , bytestring
    , cardano-crypto
    , cardano-wallet-core
    , cardano-crypto-wrapper
    , ouroboros-consensus-byron
    , text
    , cardano-wallet-byron
    , ouroboros-network
    , cborg
    , containers
    , hspec
    , fmt
    , memory
    , QuickCheck
    , transformers
  build-tools:
      hspec-discover
  type:
     exitcode-stdio-1.0
  hs-source-dirs:
      test/unit
  main-is:
      Main.hs
  other-modules:
      Cardano.Wallet.Byron.CompatibilitySpec
      Cardano.Wallet.Byron.TransactionSpec

test-suite integration
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -threaded -rtsopts
      -Wall
  if (!flag(development))
    ghc-options:
      -O2
      -Werror
  build-depends:
      base
    , aeson
    , async
    , bytestring
    , cardano-wallet-byron
    , cardano-wallet-cli
    , cardano-wallet-core
    , cardano-wallet-core-integration
    , cardano-wallet-launcher
    , cardano-wallet-test-utils
    , command
    , generic-lens
    , hspec
    , http-client
    , http-types
    , iohk-monitoring
    , temporary
    , text
  build-tools:
      cardano-wallet-byron
  type:
     exitcode-stdio-1.0
  hs-source-dirs:
      test/integration
  main-is:
      Main.hs
  other-modules:
      Cardano.Wallet.Byron.Faucet
      Test.Integration.Byron.Scenario.API.Addresses
      Test.Integration.Byron.Scenario.API.Transactions
      Test.Integration.Byron.Scenario.CLI.Addresses
      Test.Integration.Byron.Scenario.CLI.Transactions

benchmark restore
   default-language:
       Haskell2010
   default-extensions:
       NoImplicitPrelude
       OverloadedStrings
   ghc-options:
       -threaded -rtsopts
       -Wall
       -O2
   if (!flag(development))
     ghc-options:
       -Werror
   build-depends:
       base
     , bytestring
     , cardano-wallet-core
     , optparse-applicative
     , cardano-wallet-byron
     , cardano-wallet-launcher
     , ouroboros-network
     , contra-tracer
     , containers
     , criterion-measurement
     , cryptonite
     , deepseq
     , digest
     , filepath
     , fmt
     , iohk-monitoring
     , persistent
     , persistent-template
     , process
     , say
     , temporary
     , text
     , time
     , transformers
   type:
      exitcode-stdio-1.0
   hs-source-dirs:
       bench
   main-is:
       Restore.hs
   other-modules:
       Cardano.Wallet.Primitive.AddressDiscovery.Any
       Cardano.Wallet.Primitive.AddressDiscovery.Any.TH

benchmark latency
   default-language:
       Haskell2010
   default-extensions:
       NoImplicitPrelude
       OverloadedStrings
   ghc-options:
       -threaded -rtsopts
       -Wall
       -O2
   if (!flag(development))
     ghc-options:
       -Werror
   build-depends:
      base
    , aeson
    , async
    , bech32
    , bech32-th
    , bytestring
    , cardano-wallet-cli
    , cardano-wallet-core
    , cardano-wallet-core-integration
    , cardano-wallet-byron
    , cardano-wallet-launcher
    , cardano-wallet-test-utils
    , command
    , directory
    , filepath
    , fmt
    , generic-lens
    , http-client
    , http-types
    , hspec
    , iohk-monitoring
    , memory
    , stm
    , temporary
    , text
    , text-class
    , time
  build-tools:
      cardano-wallet-byron
  type:
     exitcode-stdio-1.0
  hs-source-dirs:
      bench
      test/integration
  main-is:
      Latency.hs
  other-modules:
      Cardano.Wallet.Byron.Faucet
